test/spec_vectors/data/ok/module_41.wat
(module (memory 1) (data (i32.const -1) "a"))