test/spec_vectors/data/fail/module_53.wat
(module (memory 1) (data (offset)))